--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.6",
     "react-scroll-parallax": "^3.1.0",
     "react-spring": "^9.4.5",
