--- a/apps/covico/package.json
+++ b/apps/covico/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@relatos/tailwind-config": "workspace:*"
+    "@relatos/tailwind-config": "workspace:*",
+    "@relatos/typescript-config": "workspace:*"
   }
 }
