--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,6 +12,10 @@
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
+  "dependencies": {
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
+  },
   "devDependencies": {
     "@relatos/eslint-config": "workspace:*",
     "@relatos/typescript-config": "workspace:*",
@@ -28,6 +32,7 @@
     "./format": "./src/format.ts",
     "./dom": "./src/dom.ts",
     "./math": "./src/math.ts",
-    "./types": "./src/types.ts"
+    "./types": "./src/types.ts",
+    "./css": "./src/css.ts"
   }
 }
