feat: add eslint and typescript config dependencies to package.json files

--- a/apps/covico/package.json
+++ b/apps/covico/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@relatos/tailwind-config": "workspace:*",
-    "@relatos/typescript-config": "workspace:*"
+    "@relatos/typescript-config": "workspace:*",
+    "@relatos/eslint-config": "workspace:*"
   }
 }
