--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -23,7 +23,10 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "@relatos/tailwind-config": "workspace:*",
+    "@relatos/typescript-config": "workspace:*",
+    "@relatos/eslint-config": "workspace:*"
   },
   "browserslist": [
     "defaults"
