--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,9 +18,7 @@
   },
   "devDependencies": {
     "@relatos/eslint-config": "workspace:*",
-    "@relatos/typescript-config": "workspace:*",
-    "eslint": "^8.57.0",
-    "typescript": "^5.8.2"
+    "@relatos/typescript-config": "workspace:*"
   },
   "exports": {
     ".": "./src/index.ts",
