--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,7 +6,7 @@
   "exports": {
     "./base": "./base.js",
     "./next": "./next.js",
-    "./react-internal": "./react-internal.js"
+    "./react": "./react.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
