--- a/apps/covico/package.json
+++ b/apps/covico/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.4"
+  },
   "devDependencies": {
     "@relatos/tailwind-config": "workspace:*",
     "@relatos/typescript-config": "workspace:*",
