--- a/apps/covico/package.json
+++ b/apps/covico/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "react-markdown": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
