--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-markdown": "workspace:*",
     "react-responsive": "^9.0.0-beta.6",
     "react-scroll-parallax": "^3.1.0",
     "react-spring": "^9.4.5",
