chore: update dependencies in package.json
- upgraded prettier from 3.6.0 to 3.6.2
- upgraded typescript from 5.8.2 to 5.8.3
- added @types/node, @types/react, and @types/react-dom
- added react, react-dom, and next as dependencies

--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -8,14 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4",
-    "react-markdown": "workspace:*"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20",
     "@relatos/tailwind-config": "workspace:*",
     "@relatos/typescript-config": "workspace:*",
     "@relatos/eslint-config": "workspace:*"
