--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.6.0",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.4",
-    "typescript": "5.8.2"
+    "typescript": "^5.8.3",
+    "@types/node": "^20.19.7",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
   },
   "engines": {
     "node": ">=18"
@@ -23,6 +26,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "next": "^15.4.1",
     "react-markdown": "^10.1.0"
   }
 }
