--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -3,16 +3,19 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3002",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19",
+    "react-dom": "^19",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.6",
     "react-scroll-parallax": "^3.1.0",
     "react-spring": "^9.4.5",
-    "vite-plugin-require": "^0.0.8"
+    "vite-plugin-require": "^0.0.8",
+    "@relatos/config": "workspace:*"
   },
   "devDependencies": {
     "@andylacko/vite-svg-react-loader": "^2.0.5",
