--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
-    "@types/node": "^20.19.7",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6"
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   },
   "engines": {
     "node": ">=18"
@@ -25,7 +25,5 @@
     "apps/*",
     "packages/*"
   ],
-  "dependencies": {
-    "react-markdown": "^10.1.0"
-  }
+  "dependencies": {}
 }
