--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -41,7 +41,7 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@relatos/configs-typescript": "workspace:*",
-    "@relatos/configs-eslint": "workspace:*"
+    "@relatos/config-typescript": "workspace:*",
+    "@relatos/config-eslint": "workspace:*"
   }
 }
