--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -8,23 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19",
-    "react-dom": "^19",
-    "react-icons": "^4.3.1",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-scroll-parallax": "^3.1.0",
-    "react-spring": "^9.4.5",
-    "vite-plugin-require": "^0.0.8"
+    "@relatos/content": "workspace:*",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
+    "react-scroll-parallax": "^3.4.5",
+    "react-spring": "^10.0.1",
+    "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
-    "@andylacko/vite-svg-react-loader": "^2.0.5",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
-    "vite": "^2.9.5",
-    "@relatos/configs-tailwindcss": "workspace:*",
-    "@relatos/configs-typescript": "workspace:*",
-    "@relatos/configs-eslint": "workspace:*"
+    "@andylacko/vite-svg-react-loader": "^3.0.16",
+    "@relatos/config-eslint": "workspace:*",
+    "@relatos/config-tailwindcss": "workspace:*",
+    "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "vite": "^7.0.5"
   },
   "browserslist": [
     "defaults"
