refactor(config): Update base paths in next.config.ts and vite.config.js to use brandConfig

--- a/apps/hub/vercel.json
+++ b/apps/hub/vercel.json
@@ -2,12 +2,12 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "rewrites": [
     {
-      "source": "/covico/:path*",
-      "destination": "https://relatosdebarrios-covico.vercel.app/:path*"
+      "source": "/villacovico/:path*",
+      "destination": "https://relatosdebarrios-covico.vercel.app/villacovico/:path*"
     },
     {
-      "source": "/rengifo/:path*",
-      "destination": "https://relatosdebarrios-rengifo.vercel.app/:path*"
+      "source": "/conjuntohabitacionalrengifo/:path*",
+      "destination": "https://relatosdebarrios-rengifo.vercel.app/conjuntohabitacionalrengifo/:path*"
     }
   ]
 }
