feat(eslint): Add shared ESLint configurations for Next.js and React refactor(middleware): Simplify URL handling in middleware fix(vercel): Update destination for conjuntohabitacionalrengifo rewrite style(vite): Ensure consistent build configuration in vite.config.js

--- a/apps/hub/vercel.json
+++ b/apps/hub/vercel.json
@@ -7,8 +7,8 @@
       "destination": "https://villacovico.relatosdebarrios.cl/villacovico/:path*"
     },
     {
-      "source": "/conjuntohabitacionalrengifo/:path*",
-      "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo/:path*"
+      "source": "/conjuntohabitacionalrengifo",
+      "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo"
     }
   ]
 }
