fix(scripts): Update start scripts in package.json files for consistent port usage

--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite --port 3002",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite preview --port 3002",
+    "build": "vite build"
   },
   "dependencies": {
     "@relatos/content": "workspace:*",
