--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,11 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
+    "start": {
+      "dependsOn": ["build"],
+      "persistent": true,
+      "cache": false
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
