fix(vercel): Add missing rewrites for villacovico and conjuntohabitacionalrengifo

--- a/apps/hub/vercel.json
+++ b/apps/hub/vercel.json
@@ -3,12 +3,16 @@
   "trailingSlash": false,
   "rewrites": [
     {
+      "source": "/villacovico",
+      "destination": "https://villacovico.relatosdebarrios.cl/villacovico"
+    },
+    {
       "source": "/villacovico/:path*",
       "destination": "https://villacovico.relatosdebarrios.cl/villacovico/:path*"
     },
     {
-      "source": "/conjuntohabitacionalrengifo/:path*",
-      "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo/:path*"
+      "source": "/conjuntohabitacionalrengifo",
+      "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo"
     }
   ]
 }
