--- a/apps/hub/vercel.json
+++ b/apps/hub/vercel.json
@@ -11,6 +11,10 @@
       "destination": "https://villacovico.relatosdebarrios.cl/villacovico/:path*"
     },
     {
+      "source": "/conjuntohabitacionalrengifo/:path*",
+      "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo/:path*"
+    },
+    {
       "source": "/conjuntohabitacionalrengifo",
       "destination": "https://conjuntohabitacionalrengifo.relatosdebarrios.cl/conjuntohabitacionalrengifo"
     }
