--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rdb-rengifo",
+  "name": "rengifo",
   "private": true,
   "version": "1.0.0",
   "scripts": {
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@relatos/content": "workspace:*",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-scroll-parallax": "^3.4.5",
@@ -24,7 +24,8 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "vite": "^7.0.5"
+    "vite": "^7.0.5",
+    "eslint": "catalog:"
   },
   "browserslist": [
     "defaults"
