--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,12 @@
 packages:
-  - "apps/*"
-  - "packages/**"
+  - apps/*
+  - packages/**
+
+catalog:
+  lucide-react: 0.525.0
+  next: ^15
+  react: ^19
+  react-dom: ^19
+  react-markdown: ^10
+  typescript: ^5
+  eslint: ^9.29.0
