--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -6,36 +6,11 @@
   "types": "./src/index.ts",
   "description": "Shared content management package with business data, UI texts, team information, and brand content for the Relatos de Barrios monorepo",
   "exports": {
-    ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts",
-      "require": "./src/index.ts"
-    },
-    "./core": {
-      "types": "./src/core/index.ts",
-      "import": "./src/core/index.ts",
-      "require": "./src/core/index.ts"
-    },
-    "./apps": {
-      "types": "./src/apps/index.ts",
-      "import": "./src/apps/index.ts",
-      "require": "./src/apps/index.ts"
-    },
-    "./ui": {
-      "types": "./src/ui/index.ts",
-      "import": "./src/ui/index.ts",
-      "require": "./src/ui/index.ts"
-    },
-    "./seo": {
-      "types": "./src/seo/index.ts",
-      "import": "./src/seo/index.ts",
-      "require": "./src/seo/index.ts"
-    },
-    "./types": {
-      "types": "./src/types/index.ts",
-      "import": "./src/types/index.ts",
-      "require": "./src/types/index.ts"
-    }
+    "./core": "./src/core/index.ts",
+    "./rengifo": "./src/apps/rengifo/index.ts",
+    "./hub": "./src/apps/hub/index.ts",
+    "./covico": "./src/apps/covico/index.ts",
+    "./ui": "./src/ui/index.ts"
   },
   "files": [
     "src/**/*"
