--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-dom": "catalog:",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "turbo": "^2.5.5"
+    "turbo": "^2.5.5",
+    "typescript": "catalog:"
   },
   "engines": {
     "node": ">=18"
