Refactor code structure for improved readability and maintainability

--- a/packages/configs/tailwindcss/package.json
+++ b/packages/configs/tailwindcss/package.json
@@ -19,6 +19,7 @@
     "*.d.ts"
   ],
   "devDependencies": {
+    "@relatos/config-typescript": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
