refactor: remove unnecessary compilerOptions from ESLint TypeScript configuration

--- a/packages/configs/eslint/tsconfig.json
+++ b/packages/configs/eslint/tsconfig.json
@@ -1,10 +1,5 @@
 {
   "extends": "@relatos/config-typescript",
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.js"],
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true,
-    "declarationMap": true
-  }
+  "exclude": ["node_modules"]
 }
