refactor: update gsap dependency to @gsap/react for improved modularity

--- a/apps/rengifo-next/package.json
+++ b/apps/rengifo-next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@relatos/content": "workspace:*",
     "@relatos/utils": "workspace:*",
-    "gsap": "catalog:",
+    "@gsap/react": "catalog:",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "react": "catalog:",
