--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,14 +3,15 @@ packages:
   - packages/**
 
 catalog:
+  '@gsap/react': ^2
+  '@types/node': ^24
+  '@types/react': ^19
+  '@types/react-dom': ^19
+  eslint: ^9.29.0
   lucide-react: 0.525.0
   next: ^15
   react: ^19
   react-dom: ^19
   react-markdown: ^10
   typescript: ^5
-  eslint: ^9.29.0
-  '@gsap/react': ^2
-  '@types/node': ^24
-  '@types/react': ^19
-  '@types/react-dom': ^19
+  zustand: ^5.0.6
