--- a/apps/rengifo/package.json
+++ b/apps/rengifo/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
-    "build": "next build",
+    "dev": "next dev --turbopack --port 3002",
+    "build": "next build --turbopack",
     "start": "next start --port 3002",
     "lint": "next lint"
   },
@@ -12,6 +12,7 @@
     "@gsap/react": "catalog:",
     "@relatos/content": "workspace:*",
     "@relatos/utils": "workspace:*",
+    "gsap": "catalog:",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "react": "catalog:",
