--- a/apps/covico/package.json
+++ b/apps/covico/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
-    "build": "next build",
+    "dev": "next dev --turbopack --port 3001",
+    "build": "next build --turbopack",
     "start": "next start --port 3001",
     "lint": "next lint"
   },
