chore: Update dependencies and workspace configuration

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,14 +4,15 @@ packages:
 
 catalog:
   '@gsap/react': ^2
-  '@types/node': ^24.1.0
-  '@types/react': ^19.1.8
-  '@types/react-dom': ^19.1.6
+  '@types/node': ^24.2.0
+  '@types/react': ^19.1.9
+  '@types/react-dom': ^19.1.7
+  gsap: ^3
   eslint: ^9.29.0
   lucide-react: 0.525.0
   next: ^15
   react: ^19
   react-dom: ^19
   react-markdown: ^10
-  typescript: ^5.8.3
+  typescript: 5.8.3
   zustand: ^5.0.6
