--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
+    "resend": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
